--- a/style/suganya.scss
+++ b/style/suganya.scss
@@ -18,7 +18,7 @@
   align-items: center;
   position: fixed;
   width: 100%;
-  background: #eaf4f4;
+  background: #fafafa;
   top: 0;
   left: 0;
   right: 0;
@@ -45,7 +45,7 @@
       font-size: 35px;
       margin-left: 40px;
       cursor: pointer;
-      color: #ffffff;
+      color: #fafafa;
       display: flex;
     }
   }
@@ -72,7 +72,6 @@
       li {
         @media (max-width: 1200px) {
           @include collaborate;
-          // align-items: center;
           padding: 15px;
           color: #ffffff;
         }
@@ -83,7 +82,7 @@
         }
         a {
           text-decoration: none;
-          color: #941750;
+          color: #6d6875;
           position: relative;
           font-size: 19px;
           font-weight: bold;
@@ -102,12 +101,12 @@
     .btn {
       button {
         @extend .button_format;
-        background-color: #5d001e;
+        background-color: #faa307;
         color: #ffffff;
-        box-shadow: inset 0 0 0 0 #ee4c7c;
+        box-shadow: inset 0 0 0 0 #023e8a;
         transition: ease-out 0.5s;
         &:hover {
-          box-shadow: inset 100px 0 0 0 #ee4c7c;
+          box-shadow: inset 100px 0 0 0 #023e8a;
         }
       }
     }
@@ -129,15 +128,15 @@
         width: 100%;
       }
       .drop_down:hover {
-        border-left: 4px solid #5d001e;
-        background-color: #ee4c7c;
-        color: #5d001e;
+        border-left: 4px solid #023e8a;
+        background-color: #faa307;
+        color: #023e8a;
         p:hover {
           color: $white;
         }
       }
       p {
-        color: #5d001e;
+        color: #023e8a;
         font-weight: bold;
         padding-left: 10px;
         font-size: 15px;
@@ -146,29 +145,26 @@
       .drop_down {
         @include collaborate;
         align-items: center;
-        border-bottom: 1px solid #ff90b3;
+        border-bottom: 1px solid #ade8f4;
         padding: 0 15px;
       }
     }
     .fa-whatsapp {
       font-weight: bold;
-      color: #5d001e;
+      color: #25d366;
       font-size: 27px;
       cursor: pointer;
-      &:hover {
-        color: #ee4c7c;
-      }
       @media (max-width: 1200px) {
         color: #ffffff;
         font-size: 30px;
       }
 
       p {
-        color: #ee4c7c;
-        font-size: 20px;
+        color: #6d6875;
+        font-size: 19px;
         margin-top: 5px;
         &:hover {
-          color: #5d001e;
+          color: #faa307;
         }
         @media (max-width: 1200px) {
           color: #ffffff;
@@ -177,24 +173,21 @@
       }
     }
     .fa-phone {
-      color: #5d001e;
+      color: #023e8a;
       font-size: 24px;
       font-weight: bold;
       cursor: pointer;
-      &:hover {
-        color: #ee4c7c;
-      }
       @media (max-width: 1200px) {
         color: #ffffff;
         font-size: 30px;
       }
 
       p {
-        color: #ee4c7c;
-        font-size: 20px;
+        color: #6d6875;
+        font-size: 19px;
         margin-top: 6px;
         &:hover {
-          color: #5d001e;
+          color: #faa307;
         }
         @media (max-width: 1200px) {
           color: #ffffff;
@@ -224,12 +217,12 @@
 
   .search_box {
     position: absolute;
-    border: 0.5px solid #e3afbc;
+    border: 0.5px solid #ade8f4;
     @include collaborate;
     align-items: center;
     gap: 0.1em;
     padding: 0 1em;
-    color: #5d001e;
+    color: #faa307;
     width: 47%;
     margin-top: 110px;
     transform: translate(57%, 50%);
@@ -246,7 +239,7 @@
     }
 
     &:hover {
-      color: #ee4c7c;
+      color: #023e8a;
       cursor: pointer;
     }
 
@@ -273,7 +266,7 @@
     }
     h5 {
       font-size: 22px;
-      color: #5d001e;
+      color: #023e8a;
     }
   }
   .content {
@@ -332,16 +325,16 @@
 
       li {
         p {
-          background-color: #ff90b3;
+          background-color: #cddafd;
           cursor: pointer;
           font-weight: 800;
           font-size: 11px;
-          border-radius: 10px;
+          border-radius: 5px;
           margin: 4px 7px;
           padding: 6px;
           &:hover {
-            background: #941750;
-            color: white;
+            background: #95a7da;
+            box-shadow: 3px 3px 3px #5c5552;
           }
         }
       }
@@ -465,9 +458,9 @@
   .corpbiz_box {
     border: 1px solid;
     border: none;
-    background-color: #5d001e;
+    background-color: #001845;
     border-radius: 10px;
-    color: #ffccd5;
+    color: #ffffff;
     padding: 50px;
     h3 {
       font-size: 24px;
