--- a/style/suganya.css
+++ b/style/suganya.css
@@ -707,7 +707,7 @@
   border: none;
   background-color: #001845;
   border-radius: 10px;
-  color: #ffffff;
+  color: #f8edeb;
   padding: 50px;
 }
 
@@ -725,7 +725,7 @@
   display: grid;
   -ms-grid-columns: 1fr 1fr 1fr;
       grid-template-columns: 1fr 1fr 1fr;
-  gap: 20px;
+  gap: 50px;
   text-align: center;
 }
 
@@ -737,53 +737,54 @@
 }
 
 .card_container .animation_card .cards {
-  padding: 30px;
+  padding: 35px;
   border: 1px solid;
+  cursor: pointer;
   margin: 20px 0;
   border: none;
   border-radius: 5px;
-  -webkit-box-shadow: 0 2px 10px 0 #5d001e;
-          box-shadow: 0 2px 10px 0 #5d001e;
-  -webkit-animation: pulse 4s ease-out infinite;
-          animation: pulse 4s ease-out infinite;
+  -webkit-box-shadow: -2px 0px 30px -4px #ccc5b9;
+          box-shadow: -2px 0px 30px -4px #ccc5b9;
+  -webkit-animation: pulse 1.4s ease-out infinite;
+          animation: pulse 1.4s ease-out infinite;
 }
 
 @-webkit-keyframes pulse {
-  10% {
-    -webkit-transform: scale(0.6);
-            transform: scale(0.6);
+  50% {
+    -webkit-transform: scale(0.9);
+            transform: scale(0.9);
   }
 }
 
 @keyframes pulse {
-  10% {
-    -webkit-transform: scale(0.6);
-            transform: scale(0.6);
+  50% {
+    -webkit-transform: scale(0.9);
+            transform: scale(0.9);
   }
 }
 
 .card_container .animation_card .cards h2 {
   font-size: 22px;
-  color: #5d001e;
+  color: #003566;
   font-weight: 800;
   margin-bottom: 20px;
 }
 
 .card_container .animation_card .cards p {
-  font-size: 16px;
-  color: #ee4c7c;
+  font-size: 17px;
+  color: #343a40;
   font-weight: 600;
 }
 
 .card_container .animation_card .cards img {
   margin-bottom: 10px;
-  width: 20%;
+  width: 30%;
 }
 
 .business h2 {
   margin-left: 50px;
   font-size: 40px;
-  color: #5d001e;
+  color: #1c2541;
 }
 
 @media (max-width: 900px) {
@@ -801,7 +802,7 @@
 }
 
 .business span {
-  color: #ee4c7c;
+  color: #023e8a;
 }
 
 .working_process_container {
@@ -844,7 +845,7 @@
   letter-spacing: 12px;
   font-size: 25px;
   padding: 1em;
-  color: #e3afbc;
+  color: #adb5bd;
 }
 
 .working_process_container .working_text .working_process {
@@ -852,10 +853,10 @@
 }
 
 .working_process_container .working_text .working_process p {
-  font-size: 19px;
-  font-weight: 700;
+  font-size: 18px;
+  font-weight: 600;
   line-height: 32px;
-  color: #ee4c7c;
+  color: #343a40;
 }
 
 @media (max-width: 900px) {
@@ -878,7 +879,7 @@
 .process_heading h3 {
   font-size: 38px;
   margin-bottom: -70px;
-  color: #5d001e;
+  color: #212529;
   margin-left: 190px;
   margin-top: 60px;
 }
