--- a/style/suganya.scss
+++ b/style/suganya.scss
@@ -460,11 +460,10 @@
     border: none;
     background-color: #001845;
     border-radius: 10px;
-    color: #ffffff;
+    color: #f8edeb;
     padding: 50px;
     h3 {
       font-size: 24px;
-      // font-family: ;
       margin-bottom: 50px;
     }
     p {
@@ -474,39 +473,40 @@
   .animation_card {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    gap: 20px;
+    gap: 50px;
     text-align: center;
     @media (max-width: 900px) {
       display: block;
       padding-top: 20px;
     }
     .cards {
-      padding: 30px;
+      padding: 35px;
       border: 1px solid;
+      cursor: pointer;
       margin: 20px 0;
       border: none;
       border-radius: 5px;
-      box-shadow: 0 2px 10px 0 #5d001e;
-      animation: pulse 4s ease-out infinite;
+      box-shadow: -2px 0px 30px -4px #ccc5b9;
+      animation: pulse 1.4s ease-out infinite;
       @keyframes pulse {
-        10% {
-          transform: scale(0.6);
+        50% {
+          transform: scale(0.9);
         }
       }
       h2 {
         font-size: 22px;
-        color: #5d001e;
+        color: #003566;
         font-weight: 800;
         margin-bottom: 20px;
       }
       p {
-        font-size: 16px;
-        color: #ee4c7c;
+        font-size: 17px;
+        color: #343a40;
         font-weight: 600;
       }
       img {
         margin-bottom: 10px;
-        width: 20%;
+        width: 30%;
       }
     }
   }
@@ -516,7 +516,7 @@
   h2 {
     margin-left: 50px;
     font-size: 40px;
-    color: #5d001e;
+    color: #1c2541;
     @media (max-width: 900px) {
       margin-left: 0;
     }
@@ -528,7 +528,7 @@
     }
   }
   span {
-    color: #ee4c7c;
+    color: #023e8a;
   }
 }
 
@@ -551,16 +551,16 @@
       letter-spacing: 12px;
       font-size: 25px;
       padding: 1em;
-      color: #e3afbc;
+      color: #adb5bd;
     }
     .working_process {
       padding: 5em;
 
       p {
-        font-size: 19px;
-        font-weight: 700;
+        font-size: 18px;
+        font-weight: 600;
         line-height: 32px;
-        color: #ee4c7c;
+        color: #343a40;
       }
       @media (max-width: 900px) {
         padding: 10px;
@@ -581,15 +581,12 @@
   h3 {
     font-size: 38px;
     margin-bottom: -70px;
-    color: #5d001e;
+    color: #212529;
     margin-left: 190px;
     margin-top: 60px;
     @media (max-width: 900px) {
       font-size: 30px;
     }
-    // @media (max-width: 635px) {
-    //   margin-bottom: 60px;
-    // }
   }
 }
 
