--- a/style/suganya.scss
+++ b/style/suganya.scss
@@ -500,9 +500,9 @@
         margin-bottom: 20px;
       }
       p {
-        font-size: 17px;
-        color: #343a40;
-        font-weight: 600;
+        font-size: 18px;
+        color: #212529;
+        font-weight: 500;
       }
       img {
         margin-bottom: 10px;
@@ -593,7 +593,7 @@
 .service_content {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  background-color: #5d001e;
+  background-color: #001845;
   padding: 4em;
   @media (max-width: 900px) {
     grid-template-columns: 1fr;
@@ -611,15 +611,15 @@
         text-decoration: none;
         margin-bottom: 10px;
         display: block;
-        background-color: #941750;
+        background-color: #0e2b63;
         font-size: 20px;
         line-height: 50px;
         padding-left: 15px;
         padding-right: 20px;
-        color: White;
+        font-weight: 700;
+        color: #f8f9fa;
         &:hover {
-          background-color: #ff90b3;
-          color: #5d001e;
+          border: 1px solid #f8edeb;
         }
       }
       @media (max-width: 900px) {
@@ -631,7 +631,7 @@
       writing-mode: vertical-lr;
       font-size: 20px;
       letter-spacing: 13px;
-      color: #e3afbc;
+      color: #6c757d;
       margin-top: 60px;
       margin-left: -60px;
       @media (max-width: 900px) {
@@ -642,6 +642,11 @@
   .registration_box {
     background-color: white;
     margin-left: 30px;
+    cursor: pointer;
+    transition: 1s;
+    &:hover {
+      transform: scale(1.1);
+    }
     @media (max-width: 900px) {
       margin-left: 0;
       margin-bottom: 20px;
@@ -656,7 +661,7 @@
     }
     h5 {
       font-size: 20px;
-      color: #5d001e;
+      color: #001845;
       padding: 0 20px;
       text-align: center;
       margin-bottom: 30px;
@@ -665,10 +670,10 @@
     p {
       text-align: center;
       margin-bottom: 30px;
-      color: #ee4c7c;
-      font-weight: 700;
-      padding: 0 12px;
-      font-size: 16px;
+      color: #343a40;
+      font-weight: 600;
+      padding: 0 20px;
+      font-size: 17px;
       line-height: 1.5em;
     }
 
@@ -679,19 +684,19 @@
       justify-content: center;
       align-items: center;
       cursor: pointer;
+      transition: 1s;
       width: 130px;
       height: 40px;
       border: none;
-      background-color: #5d001e;
+      background-color: #fb8b24;
       outline: none;
       color: White;
       font-size: 16px;
       z-index: -1;
-    }
-    button:hover {
-      background-color: #ff90b3;
-      color: #5d001e;
-      border: 1px solid Violet;
+      &:hover {
+        background-color: #001845;
+        transform: scale(1.1);
+      }
     }
   }
 }
@@ -700,7 +705,6 @@
   background-image: url(/asset/images/background-lap.jpg);
   display: grid;
   grid-template-columns: repeat(4, 25%);
-  // background-color: #3d5a80;
   width: 100%;
   height: 200px;
   @media (max-width: 900px) {
@@ -727,7 +731,7 @@
       margin-bottom: 10px;
     }
     &:hover {
-      background-color: #941750;
+      background-color: #023e8a;
       color: black;
     }
   }
@@ -813,10 +817,10 @@
 }
 
 .partner {
-  font-size: 25px;
-  margin-top: 80px;
+  font-size: 26px;
+  margin-top: 110px;
   text-align: center;
-  color: #5d001e;
+  color: #001845;
 }
 .swiper {
   width: 100%;
@@ -835,8 +839,8 @@
     img {
       cursor: pointer;
       display: block;
-      width: 150px;
-      height: 80px;
+      width: 200px;
+      height: 60px;
       place-items: center;
       z-index: -1000;
     }
@@ -844,10 +848,11 @@
 }
 
 .visit_line {
-  padding: 2em;
+  padding-left: 70px;
+  color: #212529;
   font-size: 22px;
   span {
-    color: #5d001e;
+    color: #023e8a;
   }
 }
 
@@ -857,10 +862,11 @@
   gap: 20px;
   padding: 3em;
   .articles_card {
-    background-color: #5d001e;
+    background-color: #0e2b63;
     cursor: pointer;
     padding: 1em;
     border-radius: 10px;
+
     img {
       width: 8%;
       border-radius: 50%;
@@ -873,7 +879,7 @@
       margin-top: 30px;
     }
     button {
-      padding: 5px 6px;
+      padding: 6px 7px;
       border-radius: 2px;
       border: none;
       outline: none;
@@ -881,9 +887,13 @@
       margin-bottom: 20px;
       font-size: 12px;
       font-weight: 700;
-      background-color: #941750;
-      color: White;
+      background-color: #fb8b24;
+      color: #f8f9fa;
       cursor: pointer;
+      &:hover {
+        background: none;
+        border: 1px solid #f8edeb;
+      }
     }
     h3 {
       font-size: 17px;
@@ -892,10 +902,10 @@
     }
     p {
       font-size: 20px;
-      color: yellow;
+      color: #fb8b24;
       font-weight: 700;
-      margin-top: 15px;
-      margin-bottom: 30px;
+      margin-top: 20px;
+      margin-bottom: 25px;
     }
   }
 }
@@ -913,53 +923,53 @@
     margin-bottom: 60px;
     outline: none;
     border: none;
-    background-color: orange;
-    color: white;
+    background-color: #0e2b63;
+    color: #f8f9fa;
     &:hover {
-      background: #5d001e;
+      background: #fb8b24;
     }
   }
 }
 
 .bottom_bar {
   display: flex;
-  background-color: yellowgreen;
+  background-color: #fb8b24;
   height: 200px;
   padding-left: 15%;
   padding-top: 20px;
 
   h1 {
     font-size: 35px;
-    color: #ffffff;
+    color: #212529;
     margin-top: 30px;
   }
   .subscribe input {
-    padding: 10px;
+    padding: 15px;
     margin-left: 60px;
     margin-top: 50px;
     width: 350px;
-    height: 40px;
-    border-radius: 15px;
+    height: 42px;
+    border-radius: 18px;
     color: #b10f2e;
-    border-color: yellow;
+    border: none;
   }
   button {
     font-size: 15px;
-    border: none;
-    padding: 8px 14px;
+    padding: 10px 14px;
     margin-left: 50px;
-    background: #c81041;
+    background: #062256;
+    border: none;
     color: white;
     cursor: pointer;
     &:hover {
-      background: blueviolet;
+      background: #0a4491;
     }
   }
 }
 
 .footer_content {
-  background-color: #5d001e;
-  color: #ffffff;
+  background-color: #001845;
+  color: #f8f9fa;
   padding: 80px 80px 25px 80px;
   @media (max-width: 900px) {
     padding: 20px;
@@ -979,22 +989,19 @@
 
       .fa-brands {
         font-size: 20px;
-        color: #ffccd5;
+        color: #faa307;
         cursor: pointer;
         margin-bottom: 10px;
-        &:hover {
-          color: #b10f2e;
-        }
       }
       h3 {
-        color: #ee4c7c;
+        color: #fb8b24;
         font-size: 18px;
         margin-bottom: 10px;
       }
       span {
         font-size: 15px;
         margin-left: 10px;
-        color: #e3afbc;
+        color: #f8f9fa;
       }
     }
 
@@ -1018,13 +1025,12 @@
       font-size: 18px;
       margin-bottom: 8px;
       font-weight: 700;
-      color: #ee4c7c;
+      color: #fb8b24;
     }
     a {
       text-decoration: none;
-      color: #e3afbc;
+      color: #f8f9fa;
       font-size: 15px;
-      // font-weight: 100;
       line-height: 1.8em;
       cursor: pointer;
       &:hover {
@@ -1038,8 +1044,8 @@
     justify-content: left;
     margin-top: 50px;
     gap: 30px;
-    border-top: 1px solid #ae818d;
-    border-bottom: 1px solid #ae818d;
+    border-top: 1px solid #168aad;
+    border-bottom: 1px solid #168aad;
     @media (max-width: 900px) {
       flex-direction: column;
     }
@@ -1049,14 +1055,15 @@
       margin-top: 10px;
       margin-bottom: 15px;
       font-size: 15px;
-      color: #e3afbc;
+      color: #f8f9fa;
       &:hover {
-        color: #ee4c7c;
+        color: #fb8b24;
+        text-decoration: underline;
       }
     }
   }
   p {
-    color: #ff90b3;
+    color: #f8f9fa;
     margin-top: 20px;
     text-align: center;
   }
