color change finished

--- a/style/colors.scss
+++ b/style/colors.scss
@@ -1,6 +1,23 @@
-$white: #ffffff;
-$gray: #6d6875;
-$blue: #1b3b6f;
-$light_blue: #bbdefb;
-$orange: #fca311;
+$white_1: #fafafa;
+
+$white_3: #f8edeb;
+$gray: #343a40;
+$gray_1: #6d6875;
+$gray_2: #5c5552;
+$gray_3: #f8edeb;
+$gray_4: #adb5bd;
+$gray_5: #343a40;
+$orange_1: #fb8b24;
+$orange_2: #ff7d00;
+$blue_1: #023e8a;
+$blue_2: #003566;
+$blue_3: #1c2541;
+$blue_4: #0e2b63;
+$blue_5: #001845;
+$blue_6: #7594ce;
+$light_blue: #ade8f4;
+// $light_blue_1: #95a7da;
+$light_blue_2: #168aad;
 $whatsapp: #25d362;
+$brown: #212529;
+$black_1: rgb(0, 0, 0.3);
