--- a/style/collaborate.scss
+++ b/style/collaborate.scss
@@ -7,3 +7,10 @@
   align-items: center;
   justify-content: center;
 }
+@mixin relative {
+  top: 0;
+  left: 0;
+  right: 0;
+  padding: 10px 30px;
+  align-items: center;
+}
