--- a/style/suganya.css
+++ b/style/suganya.css
@@ -22,17 +22,17 @@
   -ms-grid-columns: 1fr 4fr;
       grid-template-columns: 1fr 4fr;
   z-index: 1000;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
   position: fixed;
   width: 100%;
-  background: #fafafa;
+  background-color: #fafafa;
   top: 0;
   left: 0;
   right: 0;
-  margin: auto;
   padding: 10px 30px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin: auto;
 }
 
 .navbar_brand .logo img {
@@ -82,11 +82,11 @@
     display: none;
     position: fixed;
     right: 0;
+    top: 0;
+    margin-top: 0;
     width: 60%;
     height: 100vh;
-    margin-top: 0;
-    top: 0;
-    background-color: #5d001e;
+    background-color: #023e8a;
     padding: 15px 0;
   }
 }
@@ -116,7 +116,7 @@
         -ms-flex-pack: justify;
             justify-content: space-between;
     padding: 15px;
-    color: #ffffff;
+    color: #fafafa;
   }
 }
 
@@ -134,7 +134,7 @@
 
 @media (max-width: 1200px) {
   .navbar_brand .navbar ul li a {
-    color: #ffffff;
+    color: #fafafa;
     font-weight: bold;
   }
 }
@@ -145,8 +145,8 @@
 }
 
 .navbar_brand .navbar .btn button {
-  background-color: #faa307;
-  color: #ffffff;
+  background-color: #fb8b24;
+  color: #fafafa;
   -webkit-box-shadow: inset 0 0 0 0 #023e8a;
           box-shadow: inset 0 0 0 0 #023e8a;
   -webkit-transition: ease-out 0.5s;
@@ -165,7 +165,7 @@
   margin-top: 15px;
   -webkit-box-shadow: 0 2px 10px 0 black;
           box-shadow: 0 2px 10px 0 black;
-  background-color: #ffffff;
+  background-color: #fafafa;
   width: 300px;
   border-radius: 5px;
 }
@@ -182,12 +182,12 @@
 
 .navbar_brand .navbar .drop .drop_down:hover {
   border-left: 4px solid #023e8a;
-  background-color: #faa307;
+  background-color: #fb8b24;
   color: #023e8a;
 }
 
 .navbar_brand .navbar .drop .drop_down:hover p:hover {
-  color: #ffffff;
+  color: #fafafa;
 }
 
 .navbar_brand .navbar .drop p {
@@ -214,14 +214,14 @@
 
 .navbar_brand .navbar .fa-whatsapp {
   font-weight: bold;
-  color: #25d366;
+  color: #25d362;
   font-size: 27px;
   cursor: pointer;
 }
 
 @media (max-width: 1200px) {
   .navbar_brand .navbar .fa-whatsapp {
-    color: #ffffff;
+    color: #fafafa;
     font-size: 30px;
   }
 }
@@ -233,12 +233,12 @@
 }
 
 .navbar_brand .navbar .fa-whatsapp p:hover {
-  color: #faa307;
+  color: #fb8b24;
 }
 
 @media (max-width: 1200px) {
   .navbar_brand .navbar .fa-whatsapp p {
-    color: #ffffff;
+    color: #fafafa;
     font-weight: normal;
   }
 }
@@ -252,7 +252,7 @@
 
 @media (max-width: 1200px) {
   .navbar_brand .navbar .fa-phone {
-    color: #ffffff;
+    color: #fafafa;
     font-size: 30px;
   }
 }
@@ -264,12 +264,12 @@
 }
 
 .navbar_brand .navbar .fa-phone p:hover {
-  color: #faa307;
+  color: #fb8b24;
 }
 
 @media (max-width: 1200px) {
   .navbar_brand .navbar .fa-phone p {
-    color: #ffffff;
+    color: #fafafa;
     font-weight: normal;
   }
 }
@@ -313,7 +313,7 @@
           align-items: center;
   gap: 0.1em;
   padding: 0 1em;
-  color: #faa307;
+  color: #fb8b24;
   width: 47%;
   margin-top: 110px;
   -webkit-transform: translate(57%, 50%);
@@ -329,7 +329,7 @@
 
 @media (max-width: 900px) {
   .search_bar .search_box {
-    background-color: #ffffff;
+    background-color: #fafafa;
     width: 90%;
     -webkit-transform: translate(4%, -70%);
             transform: translate(4%, -70%);
@@ -491,9 +491,9 @@
 }
 
 .search_bar .content ul li p {
-  background-color: #cddafd;
+  background-color: #7594ce;
   cursor: pointer;
-  font-weight: 800;
+  font-weight: 700;
   font-size: 11px;
   border-radius: 5px;
   margin: 4px 7px;
@@ -501,7 +501,8 @@
 }
 
 .search_bar .content ul li p:hover {
-  background: #95a7da;
+  background: #023e8a;
+  color: #fafafa;
   -webkit-box-shadow: 3px 3px 3px #5c5552;
           box-shadow: 3px 3px 3px #5c5552;
 }
@@ -743,8 +744,8 @@
   margin: 20px 0;
   border: none;
   border-radius: 5px;
-  -webkit-box-shadow: -2px 0px 30px -4px #ccc5b9;
-          box-shadow: -2px 0px 30px -4px #ccc5b9;
+  -webkit-box-shadow: -2px 0px 30px -4px #6d6875;
+          box-shadow: -2px 0px 30px -4px #6d6875;
   -webkit-animation: pulse 1.4s ease-out infinite;
           animation: pulse 1.4s ease-out infinite;
 }
@@ -766,7 +767,7 @@
 .card_container .animation_card .cards h2 {
   font-size: 22px;
   color: #003566;
-  font-weight: 800;
+  font-weight: 700;
   margin-bottom: 20px;
 }
 
@@ -934,7 +935,7 @@
   padding-left: 15px;
   padding-right: 20px;
   font-weight: 700;
-  color: #f8f9fa;
+  color: #fafafa;
 }
 
 .service_content .business_registration .service_box a:hover {
@@ -954,7 +955,7 @@
           writing-mode: vertical-lr;
   font-size: 20px;
   letter-spacing: 13px;
-  color: #6c757d;
+  color: #adb5bd;
   margin-top: 60px;
   margin-left: -60px;
 }
@@ -966,7 +967,7 @@
 }
 
 .service_content .registration_box {
-  background-color: white;
+  background-color: #fafafa;
   margin-left: 30px;
   cursor: pointer;
   -webkit-transition: 1s;
@@ -997,7 +998,7 @@
 
 .service_content .registration_box h5 {
   font-size: 20px;
-  color: #001845;
+  color: #023e8a;
   padding: 0 20px;
   text-align: center;
   margin-bottom: 30px;
@@ -1034,13 +1035,13 @@
   border: none;
   background-color: #fb8b24;
   outline: none;
-  color: White;
+  color: #fafafa;
   font-size: 16px;
   z-index: -1;
 }
 
 .service_content .registration_box button:hover {
-  background-color: #001845;
+  background-color: #0e2b63;
   -webkit-transform: scale(1.1);
           transform: scale(1.1);
 }
@@ -1078,7 +1079,7 @@
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  border: 1px solid white;
+  border: 1px solid #fafafa;
 }
 
 @media (max-width: 900px) {
@@ -1088,7 +1089,7 @@
 }
 
 .user_info .user_list p {
-  color: #ffffff;
+  color: #fafafa;
   font-size: 20px;
   font-weight: 700;
 }
@@ -1287,7 +1288,7 @@
 }
 
 .articles .articles_card {
-  background-color: #0e2b63;
+  background-color: #001845;
   cursor: pointer;
   padding: 1em;
   border-radius: 10px;
@@ -1299,10 +1300,10 @@
 }
 
 .articles .articles_card span {
-  color: white;
+  color: #fafafa;
   font-size: 13px;
   font-weight: 700;
-  border-bottom: 1px solid gray;
+  border-bottom: 1px solid #6d6875;
   margin-top: 30px;
 }
 
@@ -1316,7 +1317,7 @@
   font-size: 12px;
   font-weight: 700;
   background-color: #fb8b24;
-  color: #f8f9fa;
+  color: #fafafa;
   cursor: pointer;
 }
 
@@ -1327,7 +1328,7 @@
 
 .articles .articles_card h3 {
   font-size: 17px;
-  color: white;
+  color: #fafafa;
   font-weight: 700;
 }
 
@@ -1361,7 +1362,7 @@
   outline: none;
   border: none;
   background-color: #0e2b63;
-  color: #f8f9fa;
+  color: #fafafa;
 }
 
 .read_articles button:hover {
@@ -1391,7 +1392,6 @@
   width: 350px;
   height: 42px;
   border-radius: 18px;
-  color: #b10f2e;
   border: none;
 }
 
@@ -1399,19 +1399,19 @@
   font-size: 15px;
   padding: 10px 14px;
   margin-left: 50px;
-  background: #062256;
+  background: #001845;
   border: none;
-  color: white;
+  color: #fafafa;
   cursor: pointer;
 }
 
 .bottom_bar button:hover {
-  background: #0a4491;
+  background: #023e8a;
 }
 
 .footer_content {
   background-color: #001845;
-  color: #f8f9fa;
+  color: #fafafa;
   padding: 80px 80px 25px 80px;
 }
 
@@ -1448,7 +1448,7 @@
 
 .footer_content .footer .social_media .fa-brands {
   font-size: 20px;
-  color: #faa307;
+  color: #fb8b24;
   cursor: pointer;
   margin-bottom: 10px;
 }
@@ -1462,7 +1462,7 @@
 .footer_content .footer .social_media span {
   font-size: 15px;
   margin-left: 10px;
-  color: #f8f9fa;
+  color: #fafafa;
 }
 
 .footer_content .footer .start_business {
@@ -1514,7 +1514,7 @@
 
 .footer_content .footer a {
   text-decoration: none;
-  color: #f8f9fa;
+  color: #fafafa;
   font-size: 15px;
   line-height: 1.8em;
   cursor: pointer;
@@ -1554,7 +1554,7 @@
   margin-top: 10px;
   margin-bottom: 15px;
   font-size: 15px;
-  color: #f8f9fa;
+  color: #fafafa;
 }
 
 .footer_content .footer_end a:hover {
@@ -1563,7 +1563,7 @@
 }
 
 .footer_content p {
-  color: #f8f9fa;
+  color: #fafafa;
   margin-top: 20px;
   text-align: center;
 }
