--- a/style/suganya.scss
+++ b/style/suganya.scss
@@ -862,6 +862,26 @@
     cursor: pointer;
     padding: 1em;
     border-radius: 10px;
+    &:hover {
+      animation: bounce 1s linear;
+    }
+    @keyframes bounce {
+      20%,
+      50%,
+      80%,
+      to {
+        transform: translateY(0);
+      }
+      40% {
+        transform: translateY(-30px);
+      }
+      70% {
+        transform: translateY(-15px);
+      }
+      90% {
+        transform: translateY(-4px);
+      }
+    }
 
     img {
       width: 8%;
