--- a/style/suganya.css
+++ b/style/suganya.css
@@ -1101,7 +1101,8 @@
 
 .user_info .user_list:hover {
   background-color: #023e8a;
-  color: black;
+  -webkit-box-shadow: 0 0 20px 5px #023e8a;
+          box-shadow: 0 0 20px 5px #023e8a;
 }
 
 .corpiz_app {
@@ -1268,6 +1269,156 @@
   z-index: -1000;
 }
 
+.latest_news {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  padding-bottom: 50px;
+}
+
+.latest_news .star_slide {
+  text-align: center;
+  max-width: 50%;
+  position: relative;
+  -webkit-animation: fallinout 2s ease-in;
+          animation: fallinout 2s ease-in;
+}
+
+.latest_news .star_slide .slide .images {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  padding-right: 20px;
+}
+
+.latest_news .star_slide .slide .images img {
+  width: 50px;
+  border-radius: 50%;
+  border: 5px solid gray;
+}
+
+.latest_news .star_slide .slide .star_icon {
+  padding: 20px 20px 0;
+  font-size: 30px;
+}
+
+.latest_news .star_slide .slide .star_icon i {
+  font-size: 25px;
+  color: blue;
+}
+
+.latest_news .star_slide .slide .info {
+  padding: 20px 20px;
+}
+
+.latest_news .star_slide .slide .info p {
+  font-size: 18px;
+}
+
+.latest_news .star_slide .slide .info h5 {
+  padding-top: 20px;
+  font-size: 20px;
+}
+
+.latest_news .star_slide .slick_dots {
+  position: absolute;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  left: 50%;
+  -webkit-transform: translateX(100%);
+          transform: translateX(100%);
+  margin-top: -10px;
+}
+
+.latest_news .star_slide li {
+  cursor: pointer;
+  list-style: none;
+  margin: 5px;
+}
+
+.latest_news .star_slide li button {
+  cursor: pointer;
+  font-size: 0;
+  padding: 1px 20px;
+  background-color: #001845;
+  border: none;
+}
+
+.latest_news .star_slide .slick_active button {
+  background-color: rebeccapurple;
+}
+
+.latest_news .latest_news {
+  padding: 20px;
+  max-width: 50%;
+  text-align: left;
+  border-left: 2px solid orangered;
+  color: blue;
+  -webkit-animation: fallin 2s ease-in;
+          animation: fallin 2s ease-in;
+}
+
+@-webkit-keyframes fallin {
+  10% {
+    -webkit-transform: translateX(-350%);
+            transform: translateX(-350%);
+  }
+}
+
+@keyframes fallin {
+  10% {
+    -webkit-transform: translateX(-350%);
+            transform: translateX(-350%);
+  }
+}
+
+.latest_news .heading h2 {
+  text-transform: capitalize;
+  padding-bottom: 38px;
+}
+
+.latest_news .news_slider .slide h3 {
+  font-size: 20px;
+}
+
+.latest_news .news_slider .slide p {
+  padding-top: 15px;
+}
+
+.latest_news .news_slider .slick_dots {
+  cursor: pointer;
+  position: absolute;
+  display: block;
+  left: 50%;
+  -webkit-transform: translate(1350%, -90%);
+          transform: translate(1350%, -90%);
+}
+
+.latest_news .news_slider li {
+  cursor: pointer;
+  list-style: none;
+  margin: 5px;
+}
+
+.latest_news .news_slider li button {
+  cursor: pointer;
+  font-size: 0;
+  padding: 5px;
+  border-radius: 50%;
+  background-color: #7594ce;
+  border: none;
+}
+
+.latest_news .news_slider .slick_active button {
+  background-color: antiquewhite;
+}
+
 .visit_line {
   padding-left: 70px;
   color: #212529;
@@ -1285,6 +1436,13 @@
       grid-template-columns: repeat(4, 1fr);
   gap: 20px;
   padding: 3em;
+}
+
+@media (max-width: 900px) {
+  .articles {
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+  }
 }
 
 .articles .articles_card {
@@ -1353,7 +1511,6 @@
   font-size: 13px;
   font-weight: 700;
   border-bottom: 1px solid #6d6875;
-  margin-top: 30px;
 }
 
 .articles .articles_card button {
@@ -1428,6 +1585,17 @@
   padding-top: 20px;
 }
 
+@media (max-width: 750px) {
+  .bottom_bar {
+    padding: 5px;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    height: auto;
+  }
+}
+
 .bottom_bar h1 {
   font-size: 35px;
   color: #212529;
@@ -1444,6 +1612,14 @@
   border: none;
 }
 
+@media (max-width: 750px) {
+  .bottom_bar .subscribe input {
+    width: 70%;
+    margin-left: 0;
+    margin-bottom: 10px;
+  }
+}
+
 .bottom_bar button {
   font-size: 15px;
   padding: 10px 14px;
@@ -1452,6 +1628,12 @@
   border: none;
   color: #fafafa;
   cursor: pointer;
+}
+
+@media (max-width: 700px) {
+  .bottom_bar button {
+    margin-left: 0;
+  }
 }
 
 .bottom_bar button:hover {
