--- a/style/suganya.scss
+++ b/style/suganya.scss
@@ -729,7 +729,7 @@
     }
     &:hover {
       background-color: $blue_1;
-      color: $black_1;
+      box-shadow: 0 0 20px 5px $blue_1;
     }
   }
 }
@@ -843,6 +843,123 @@
   }
 }
 
+.latest_news {
+  display: flex;
+  flex-wrap: wrap;
+  padding-bottom: 50px;
+  .star_slide {
+    text-align: center;
+    max-width: 50%;
+    position: relative;
+    animation: fallinout 2s ease-in;
+    .slide {
+      .images {
+        display: flex;
+        justify-content: flex-end;
+        padding-right: 20px;
+        img {
+          width: 50px;
+          border-radius: 50%;
+          border: 5px solid gray;
+        }
+      }
+      .star_icon {
+        padding: 20px 20px 0;
+        // margin-left: 72%;
+        font-size: 30px;
+        i {
+          font-size: 25px;
+          color: blue;
+        }
+      }
+      .info {
+        padding: 20px 20px;
+        p {
+          font-size: 18px;
+        }
+        h5 {
+          padding-top: 20px;
+          font-size: 20px;
+        }
+      }
+    }
+    .slick_dots {
+      position: absolute;
+      display: flex;
+      left: 50%;
+      transform: translateX(100%);
+      margin-top: -10px;
+    }
+    li {
+      cursor: pointer;
+      list-style: none;
+      margin: 5px;
+      button {
+        cursor: pointer;
+        font-size: 0;
+        padding: 1px 20px;
+        background-color: #001845;
+        border: none;
+      }
+    }
+    .slick_active button {
+      background-color: rebeccapurple;
+    }
+  }
+  .latest_news {
+    padding: 20px;
+    max-width: 50%;
+    text-align: left;
+    border-left: 2px solid orangered;
+    color: blue;
+    animation: fallin 2s ease-in;
+    @keyframes fallin {
+      10% {
+        transform: translateX(-350%);
+      }
+    }
+  }
+  .heading {
+    h2 {
+      text-transform: capitalize;
+      padding-bottom: 38px;
+    }
+  }
+  .news_slider {
+    .slide {
+      h3 {
+        font-size: 20px;
+      }
+      p {
+        padding-top: 15px;
+      }
+    }
+    .slick_dots {
+      cursor: pointer;
+      position: absolute;
+      display: block;
+      left: 50%;
+      transform: translate(1350%, -90%);
+    }
+    li {
+      cursor: pointer;
+      list-style: none;
+      margin: 5px;
+      button {
+        cursor: pointer;
+        font-size: 0;
+        padding: 5px;
+        border-radius: 50%;
+        background-color: #7594ce;
+        border: none;
+      }
+    }
+    .slick_active button {
+      background-color: antiquewhite;
+    }
+  }
+}
+
 .visit_line {
   padding-left: 70px;
   color: $brown;
@@ -857,6 +974,9 @@
   grid-template-columns: repeat(4, 1fr);
   gap: 20px;
   padding: 3em;
+  @media (max-width: 900px) {
+    grid-template-columns: 1fr;
+  }
   .articles_card {
     background-color: $blue_5;
     cursor: pointer;
@@ -892,7 +1012,7 @@
       font-size: 13px;
       font-weight: 700;
       border-bottom: 1px solid $gray_1;
-      margin-top: 30px;
+      // margin-top: -60px;
     }
     button {
       padding: 6px 7px;
@@ -953,6 +1073,11 @@
   height: 200px;
   padding-left: 15%;
   padding-top: 20px;
+  @media (max-width: 750px) {
+    padding: 5px;
+    flex-direction: column;
+    height: auto;
+  }
 
   h1 {
     font-size: 35px;
@@ -967,6 +1092,11 @@
     height: 42px;
     border-radius: 18px;
     border: none;
+    @media (max-width: 750px) {
+      width: 70%;
+      margin-left: 0;
+      margin-bottom: 10px;
+    }
   }
   button {
     font-size: 15px;
@@ -976,6 +1106,9 @@
     border: none;
     color: $white_1;
     cursor: pointer;
+    @media (max-width: 700px) {
+      margin-left: 0;
+    }
     &:hover {
       background: $blue_1;
     }
