--- a/style/suganya.scss
+++ b/style/suganya.scss
@@ -820,6 +820,7 @@
 }
 .swiper {
   width: 100%;
+  margin-right: 40px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -846,12 +847,34 @@
 .latest_news {
   display: flex;
   flex-wrap: wrap;
+  padding-left: 12%;
+
   padding-bottom: 50px;
   .star_slide {
     text-align: center;
     max-width: 50%;
     position: relative;
     animation: fallinout 2s ease-in;
+
+    &.latest_news_slider {
+      .slick-dots {
+        position: absolute;
+        display: flex;
+        // left: -50px;
+
+        transform: translateX(100%) scale(2);
+        // margin-top: -10px;
+      }
+
+      li {
+        transform: translate(150%, -10%);
+        button {
+          background-color: red;
+          padding: 5px;
+          border-radius: 50%;
+        }
+      }
+    }
     .slide {
       .images {
         display: flex;
@@ -860,34 +883,39 @@
         img {
           width: 50px;
           border-radius: 50%;
-          border: 5px solid gray;
+          border: 5px solid $gray_4;
         }
       }
       .star_icon {
-        padding: 20px 20px 0;
-        // margin-left: 72%;
-        font-size: 30px;
+        padding-right: 20px;
+        padding-top: 5px;
+        text-align: right;
+
         i {
-          font-size: 25px;
-          color: blue;
+          font-size: 30px;
+          color: $blue_4;
         }
       }
       .info {
         padding: 20px 20px;
+        text-align: right;
+
         p {
-          font-size: 18px;
+          font-size: 20px;
+          line-height: 1.5em;
         }
         h5 {
           padding-top: 20px;
-          font-size: 20px;
+          font-weight: 700;
+          font-size: 25px;
         }
       }
     }
-    .slick_dots {
+    .slick-dots {
       position: absolute;
       display: flex;
       left: 50%;
-      transform: translateX(100%);
+      transform: translateX(100%) scale(2);
       margin-top: -10px;
     }
     li {
@@ -902,7 +930,7 @@
         border: none;
       }
     }
-    .slick_active button {
+    .slick-active button {
       background-color: rebeccapurple;
     }
   }
@@ -911,7 +939,7 @@
     max-width: 50%;
     text-align: left;
     border-left: 2px solid orangered;
-    color: blue;
+    color: $blue_4;
     animation: fallin 2s ease-in;
     @keyframes fallin {
       10% {
@@ -922,24 +950,23 @@
   .heading {
     h2 {
       text-transform: capitalize;
+      margin-top: -10px;
       padding-bottom: 38px;
+      font-size: 40px;
     }
   }
-  .news_slider {
+  .latest_news_slider {
     .slide {
+      text-align: left;
+
       h3 {
-        font-size: 20px;
+        font-size: 18px;
+        font-weight: 600;
+        margin-top: 20px;
       }
       p {
-        padding-top: 15px;
+        padding-top: 20px;
       }
-    }
-    .slick_dots {
-      cursor: pointer;
-      position: absolute;
-      display: block;
-      left: 50%;
-      transform: translate(1350%, -90%);
     }
     li {
       cursor: pointer;
@@ -974,6 +1001,7 @@
   grid-template-columns: repeat(4, 1fr);
   gap: 20px;
   padding: 3em;
+
   @media (max-width: 900px) {
     grid-template-columns: 1fr;
   }
